# streamseeker

./: .gitignore  CODE_OF_CONDUCT.md  CONDUCT.md  LICENSE  README.md  pyproject.toml  run.bat  run.sh
docs/: index.md
src/streamseeker/: __main__.py  __version__.py  streamseeker.py
src/streamseeker/api/: handler.py
src/streamseeker/api/core/: __init__.py  exceptions.py  logger.py  output_handler.py  request_handler.py
src/streamseeker/api/core/classes/: base_class.py
src/streamseeker/api/core/downloader/: ffmpeg.py  helper.py  standard.py
src/streamseeker/api/core/formatters/: base_fomatter.py  base_formatter.py
src/streamseeker/api/providers/: __init__.py  provider_base.py  provider_factory.py  providers.py
src/streamseeker/api/providers/doodstream/: doodstream.py
src/streamseeker/api/providers/speedfiles/: speedfiles.py
src/streamseeker/api/providers/streamtape/: streamtape.py
src/streamseeker/api/providers/vidoza/: vidoza.py
src/streamseeker/api/providers/voe/: voe.py
src/streamseeker/api/streams/: stream_base.py  stream_factory.py  streams.py
src/streamseeker/api/streams/aniworldto/: __init__.py  aniworldto.py
src/streamseeker/api/streams/megakinotax/: __init__.py  megakinotax.py
src/streamseeker/api/streams/sto/: __init__.py  sto.py
src/streamseeker/console/: application.py  command_loader.py
src/streamseeker/console/commands/: about.py  download.py  run.py
src/streamseeker/console/logging/: filters.py  io_formatter.py  io_handler.py
src/streamseeker/utils/: _compat.py
tests/: test_request_handler.py
(+7 files in other folders)
