[tool.streamseeker]
name = "streamseeker"
version = "0.1.5"
authors = [
  { name="Dennis Fiedler", email="dennis.fiedler@uniprank.com" },
]
description = "Stream download helper to download files from the internet"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[metadata]
version = "0.1.5"

[project.urls]
Homepage = "https://github.com/uniprank/streamseeker"
Issues = "https://github.com/uniprank/streamseeker/issues"

[tool.poetry]
name = "streamseeker"
version = "0.1.5"
description = "Helping package to download files from different streaming platforms"
authors = ["Dennis Fiedler <dennis.fiedler@uniprank.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
invoke = "^2.2.0"
requests = "^2.32.2"
selenium = "^4.15.2"
tqdm = "4.66.3"
tomli = "^2.0.2"
cleo = "^2.1.0"
numpy = "^2.1.2"
packaging = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
